[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "flint-limiter"
version = "0.2.0"
description = "Embedded persistent rate limiting for Python, powered by Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "BuildByNexora" }]
keywords = ["rate-limit", "rate-limiter", "rust", "python", "embedded", "token-bucket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/BuildByNexora/Flint"
Repository = "https://github.com/BuildByNexora/Flint"
Issues = "https://github.com/BuildByNexora/Flint/issues"

[tool.maturin]
manifest-path = "crates/flint-py/Cargo.toml"
module-name = "flint"
