[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "flint-limiter"
version = "0.2.1"
description = "Embedded persistent rate limiting for Python, powered by Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "BuildByNexora" }]
keywords = [
    "rate-limit",
    "rate-limiter",
    "rate-limiting",
    "rust",
    "python",
    "embedded",
    "persistent",
    "redis-alternative",
    "token-bucket",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/BuildByNexora/Flint"
Repository = "https://github.com/BuildByNexora/Flint"
Issues = "https://github.com/BuildByNexora/Flint/issues"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100,<0.116",
    "starlette>=0.27,<0.48",
    "httpx>=0.24,<0.29",
]

[tool.maturin]
manifest-path = "crates/flint-py/Cargo.toml"
module-name = "flint._native"
python-source = "python"
