[package]
name = "flint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "flint"
path = "src/main.rs"

[dependencies]
axum = "0.7"
clap.workspace = true
flint-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
